--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -9,5 +9,5 @@
 <% elsif current_account_user.admin? %>
   <%= render partial: "tokani_admin" %>
 <% else %>
-  <%= render partial: "requestor_details" %>
+  <%= render partial: "general" %>
 <% end %>
