adding in secondary contact info on agency creation by tokani

--- a/app/views/agencies/_tokani_form.html.erb
+++ b/app/views/agencies/_tokani_form.html.erb
@@ -53,6 +53,30 @@
               <%= agency_detail.label :phone_number, class: "block text-sm font-medium text-gray-700" %>
               <%= agency_detail.text_field :phone_number, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
             </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :second_contact_first_name, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :second_contact_first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :second_contact_last_name, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :second_contact_last_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :second_contact_email, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :second_contact_email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :second_contact_phone_number, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :second_contact_phone_number, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :second_contact_title, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :second_contact_title, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :phone_number, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :phone_number, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
           <% end %>
           <%= form.fields_for :physical_address do |physical_address| %>
             <%= physical_address.hidden_field :address_type, value: "physical" %>
