--- a/app/views/interpreters/my_assigned_details.html.erb
+++ b/app/views/interpreters/my_assigned_details.html.erb
@@ -3,34 +3,15 @@
 		<%= link_to "< Back", interpreters_my_assigned_path, class: "text-blue-600 underline" %>
 	</div>
 	<div class="border border-gray-300 bg-white px-4 py-5 sm:px-6 mt-5">
-		<h3 class="text-lg font-medium leading-6 text-gray-900">M21-156 Details</h3>
-		<div class="grid grid-cols-2 gap-4 mt-5">
-			<div>
-				<ul class="list-none list-outside">
-					<li><i class="fa fa-calendar mr-4"></i>Start date and Time</li>
-					<li><i class="fa fa-male mr-4"></i> In-Person</li>
-					<li><i class="fa fa-language mr-2"></i> Language</li>
-					<li><i class="fa fa-location-arrow mr-4"></i>Site</li>
-					<li><i class="fa fa-square mr-4"></i>Department</li>
-					<li><i class="fa fa-book mr-3"></i> Subject</li>
-				</ul>
-			</div><!-- ... -->
-			<div>
-				<ul class="list-none">
-					<li>Site</li>
-					<li>Department</li>
-					<li>Duration</li>
-					<li>Provider</li>
-					<li>Requester</li>
-				</ul>
-			</div>
-		</div>
-		<div class="mt-10 mb-5">
+		<h3 class="text-lg font-medium leading-6 text-gray-900"><%= @appointment.ref_number %> Details</h3>
+    <%= render partial: "appointment_details" %>
+<!-- 		<div class="mt-10 mb-5">
 			<p>Appt. Docs:</p>
-		</div>
+		</div> -->
 	</div>
 	<div class="mt-10 gap-8 columns-2 flex justify-center">
-		<button class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-red-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Decline Assignment</button>
-		<button class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Accept Assignment</button>
+    <%= button_to "Decline Assignment", decline_offered_interpreter_path(@appointment), data: { turbo_method: "post", turbo_confirm: "Are you sure?" }, class: "ml-3 inline-flex justify-center rounded-md border border-transparent bg-red-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" %>
+
+    <%= button_to "Accept Assignment", accept_offered_interpreter_path(@appointment), data: { turbo_method: "post", turbo_confirm: "Are you sure?" }, class: "ml-3 inline-flex justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" %>
 	</div>
 </div>
