--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
     <%= f.fields_for :owned_accounts do |a| %>
       <div class="form-group">
         <%= a.label :name %>
-        <%= a.text_field :name, autofocus: true, placeholder: true, class: "form-control" %>
+        <%= a.text_field :name, autofocus: true, placeholder: "Company name", class: "form-control" %>
       </div>
     <% end %>
 
@@ -41,7 +41,7 @@
         <button type="button" data-action="password-visibility#toggle" class="text-gray-500 absolute inset-y-0 right-0 flex items-center pr-3">
           <span data-password-visibility-target="icon"><i class="fa-regular fa-eye"></i></span>
           <span data-password-visibility-target="icon" class="hidden"><i class="fa-regular fa-eye-slash"></i></span>
-        </button> 
+        </button>
       </div>
       <% if @minimum_password_length %>
         <p class="mt-3 text-sm text-gray-600"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></p>
@@ -51,6 +51,7 @@
     <div class="form-group">
       <%= f.label :time_zone %>
       <%= f.time_zone_select :time_zone, nil, { default: browser_time_zone.name }, { class: "select" } %>
+      <p class="mt-3 text-sm text-gray-600">Time zone you are located in.</p>
     </div>
 
     <div class="form-group">
