lot of agency intake form work some sidenav cleanup and general cleanup

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,6 +6,7 @@
     <%= f.hidden_field :reset_password_token %>
 
     <div class="form-group" data-controller="password-visibility">
+      <%= params[:new_account] %>
       <%= f.label :password, t('.new_password'), class: "block text-sm font-medium text-gray-700" %>
       <div class="relative mt-1 rounded-md shadow-sm">
       <%= f.password_field :password, data: { password_visibility_target: "input"}, autocomplete: "new-password", placeholder: "password", class: "block w-full rounded-md border-gray-300 pr-10 focus:border-tokanisecondary-500 focus:ring-tokanisecondary-500 sm:text-sm" %>
